--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a project created by inova/secti trilhas backend",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js"
   },
   "author": "",
   "license": "ISC",
