--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "prisma generate",
     "start": "node src/server.js"
   },
   "author": "",
