--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,12 @@
   "builds": [
     { "src": "src/server.js", "use": "@vercel/node" }
   ],
-  "routes": [
-    { "src": "/.*", "dest": "src/server.js" }
-  ]
+  "build": {
+    "functions": {
+      "api/**/*.js": {
+        "prerender": false
+      }
+    },
+    "command": "npm run build"
+  }
 }
