--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "api-3doors-game",
   "version": "1.0.0",
-  "description": "a project created by inova/secti trilhas backend",
-  "main": "src/server.js",
+  "type": "module",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "vercel-build": "npx prisma generate"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.15.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "prisma": "^5.15.0"
+    "express": "^4.19.2",
+    "prisma": "^5.15.0",
+    "dotenv": "^16.4.5"
   }
 }
