--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "a project created by inova/secti trilhas backend",
   "main": "index.js",
   "scripts": {
-    "vercel-build": "npx prisma generate && npx prisma db push"
+    "vercel-build": "npx prisma db push",
+    "prisma:generate": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
