feat: inclusa rota para buscar todos os users

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "a project created by inova/secti trilhas backend",
   "main": "index.js",
   "scripts": {
-    "vercel-build": "npx prisma generate"
+    "vercel-build": "npx prisma generate",
+    "dev": "node --watch ./src/server.js",
+    "start": "node ./src/server.js"
   },
   "author": "",
   "license": "ISC",
